# 2025-1-CSC4004-1-6-OpenAimForce

./: README.md
.github/workflows/: build-docker.yml  game-server-force-power-switch.yml  game-server-power-switch.yml  game-server-shutdown.yml
GameServer/AC/config/: autoexec.cfg  menus.cfg  menus_auth.cfg  menus_bot.cfg  menus_multiplayer.cfg  menus_settings.cfg  serverpwd.cfg
GameServer/AC/source/src/: Makefile  client.cpp  clientgame.cpp  console.cpp  cube.h  entities.cpp  entity.h  menus.cpp  pch.cpp  protocol.cpp  protos.h  rendergl.cpp  server.cpp
GameServer/AC/source/vcpp/: .gitignore  assaultcube.vcxproj  assaultcube.vcxproj.filters  setup_vcpkg.bat  (+1 more)
GameServer/GameController/: build-server  build-server.sh  run-server  run-server.sh
GameServer/QueueServer/: README.md
GameServer/QueueServer/Database/: DDL.sql
GameServer/QueueServer/GameHost/: go.mod  main.go
GameServer/QueueServer/MatchMaker/: .gitignore  go.mod  go.sum  main.go  test_signup.html
Inference/: CMakeLists.txt  main.cc  model_predictor.cc  model_predictor.hpp  test_indices.txt
Inference/compat_model/: fingerprint.pb  saved_model.pb
Inference/compat_model/variables/: variables.data-00000-of-00001  variables.index
aimbot_analyze/: AimHack_Analysis_A.md  AimHack_Analysis_B.md  AimHack_Analysis_C.md
model_dev/: .gitignore
model_dev/dataset/: game_db.csv  game_db_6.csv  strip_id.py  strip_ip.py
model_dev/ml/: convert.py  logistic.py  lstm_model.py  lstm_model_type5.py  model.py  run_model.py  test.py
model_dev/ml/result/: final_aimhack_model.keras  report.md  report_type5.md
(+40 files in other folders)
